testCases/semanticAnalyzerTestCases/correct/loopStmtC.cs16
/*

    Author: Chris Kaebe
    Date: Feb 21, 2016
*/

void main(int x){
    int y;

    loop{
        bool doop;
        loop ; end;
    }
    {;}
    end;

    loop
        if( 1 = 2 )
            exit;
        continue;
        {int shoes,kitties;
            y := y - 1;
            if( shoes = kitties )
                exit;
            else if ( y = -999999999)
                continue;
        }
    end;


    loop
        loop
            loop
                loop
                    loop
                        loop
                            loop
                                loop
                                    loop
                                        loop
                                            loop
                                                loop
                                                   exit;
                                                end;
                                                exit;
                                            end;
                                            exit;
                                        end;
                                        exit;
                                    end;
                                    exit;
                                end;
                                exit;
                            end;
                            exit;
                        end;
                        exit;
                    end;
                    exit;
                end;
                exit;
            end;
            exit;
        end;
        exit;
    end;



}