testCases/semanticAnalyzerTestCases/error/loopStmtE.cs16
/*
    Author: Chris Kaebe
    Date: March 3, 2016
*/

int main(void){
    int y, banana;

    continue;
    exit;

    loop {
        bool doop;
        loop ; end;
    }
    {;}
    end;

    continue;
    exit;

    return banana;
}